# TokenPrint

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  install.sh  plan-and-pr-tracking.md  pyproject.toml  setup-gemini-telemetry.sh  template.html  test_tokenprint.py  tokenprint.py  user-questions-and-answers.md
.github/scripts/: ci-secret-scan.sh  ci-shell-syntax-check.sh
.github/workflows/: ci.yml
daemon/go/: README.md  go.mod  main.go  main_test.go
daemon/rust/: Cargo.toml  README.md
daemon/rust/src/: main.rs
docs/: daemon-language-eval.md
tokenprint/: __init__.py  __main__.py  constants.py  providers.py  template.html
